# ML-WEBAPP-USING-STREAMLIT

./: app.py  pyproject.toml
data/Excels/: X_test_con_outliers.xlsx  X_test_con_outliers_norm.xlsx  X_test_con_outliers_scal.xlsx  X_test_sel_k7.xlsx  X_test_sin_outliers.xlsx  X_test_sin_outliers_norm.xlsx  X_test_sin_outliers_scal.xlsx  X_train_con_outliers.xlsx  X_train_con_outliers_norm.xlsx  X_train_con_outliers_scal.xlsx  X_train_sel_k7.xlsx  X_train_sin_outliers.xlsx  X_train_sin_outliers_norm.xlsx  X_train_sin_outliers_scal.xlsx  y_test.xlsx  y_train.xlsx
data/Models(Norm_scal)/models/: Random_forest_model.sav
src/: EDA.ipynb  Machine_learning.ipynb  app.py
